[gd_scene load_steps=14 format=3 uid="uid://dstxvvp8b51n4"]

[ext_resource type="Script" uid="uid://bcl40scfcgca2" path="res://airlock.gd" id="1_5j34s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f1gjg"]
size = Vector2(224, 192)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_bc5nu"]
cull_mode = 1
polygon = PackedVector2Array(-440, -496, -440, -152, -216, -152, -216, -496)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2yopf"]
size = Vector2(512, 1888)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qnfc1"]
size = Vector2(448, 528)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5j34s"]
size = Vector2(32, 1088)

[sub_resource type="Animation" id="Animation_2yopf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("roof:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.808998, 0.808998, 0.808998, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("roof:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("door:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-440, -472)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("door2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(232, -472)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("door4:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, -1400)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("door3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-216, -1400)]
}

[sub_resource type="Animation" id="Animation_f1gjg"]
resource_name = "exit"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("door:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-216, -472), Vector2(-440, -472)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("door2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(8, -472), Vector2(232, -472)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("door3:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-440, -1400), Vector2(-216, -1400)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("door4:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(232, -1400), Vector2(8, -1400)]
}

[sub_resource type="Animation" id="Animation_5j34s"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("roof:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.808998, 0.808998, 0.808998, 1), Color(0.807843, 0.807843, 0.807843, 0)]
}

[sub_resource type="Animation" id="Animation_qnfc1"]
resource_name = "seal"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("door:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-440, -472), Vector2(-216, -472)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("door2:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(232, -472), Vector2(8, -472)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("door4:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(8, -1400), Vector2(232, -1400)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("door3:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-216, -1400), Vector2(-440, -1400)]
}

[sub_resource type="Animation" id="Animation_3yst8"]
resource_name = "shut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("roof:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.80784315, 0.80784315, 0.80784315, 0), Color(0.80784315, 0.80784315, 0.80784315, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f1gjg"]
_data = {
&"RESET": SubResource("Animation_2yopf"),
&"exit": SubResource("Animation_f1gjg"),
&"open": SubResource("Animation_5j34s"),
&"seal": SubResource("Animation_qnfc1"),
&"shut": SubResource("Animation_3yst8")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_3yst8"]
polygon = PackedVector2Array(-248, -1400, -248, -128, -240, -128, -240, -1400)

[node name="Airlock" type="Node2D"]
script = ExtResource("1_5j34s")

[node name="walls" type="ColorRect" parent="."]
offset_left = -248.0
offset_top = -1400.0
offset_right = 264.0
offset_bottom = -128.0
color = Color(0.513233, 0.513233, 0.513233, 1)

[node name="walls2" type="ColorRect" parent="."]
z_index = 2
offset_left = -248.0
offset_top = -472.0
offset_right = -216.0
offset_bottom = -128.0
color = Color(0.629675, 0.629675, 0.629675, 1)

[node name="walls4" type="ColorRect" parent="."]
z_index = 2
offset_left = -248.0
offset_top = -1400.0
offset_right = -216.0
offset_bottom = -1056.0
color = Color(0.513726, 0.513726, 0.513726, 1)

[node name="walls5" type="ColorRect" parent="."]
z_index = 2
offset_left = 232.0
offset_top = -1400.0
offset_right = 264.0
offset_bottom = -1056.0
color = Color(0.513726, 0.513726, 0.513726, 1)

[node name="walls3" type="ColorRect" parent="."]
z_index = 2
offset_left = 232.0
offset_top = -472.0
offset_right = 264.0
offset_bottom = -128.0
color = Color(0.629675, 0.629675, 0.629675, 1)

[node name="floor" type="ColorRect" parent="."]
offset_left = -216.0
offset_top = -1400.0
offset_right = 232.0
offset_bottom = -128.0
color = Color(0.288518, 0.288518, 0.288518, 1)

[node name="roof" type="ColorRect" parent="."]
z_index = 2
offset_left = -248.0
offset_top = -1680.0
offset_right = 264.0
offset_bottom = -472.0
color = Color(0.808998, 0.808998, 0.808998, 1)

[node name="door" type="ColorRect" parent="."]
z_index = 1
offset_left = -440.0
offset_top = -472.0
offset_right = -216.0
offset_bottom = -128.0
color = Color(0.244777, 0.244776, 0.244776, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="door"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="door/StaticBody2D"]
position = Vector2(112, 248)
shape = SubResource("RectangleShape2D_f1gjg")

[node name="LightOccluder2D" type="LightOccluder2D" parent="door"]
show_behind_parent = true
position = Vector2(440, 496)
occluder = SubResource("OccluderPolygon2D_bc5nu")
sdf_collision = false

[node name="door3" type="ColorRect" parent="."]
z_index = 1
offset_left = -216.0
offset_top = -1400.0
offset_right = 8.0
offset_bottom = -1056.0
color = Color(0.244777, 0.244776, 0.244776, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="door3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="door3/StaticBody2D"]
position = Vector2(112, 248)
shape = SubResource("RectangleShape2D_f1gjg")

[node name="LightOccluder2D" type="LightOccluder2D" parent="door3"]
position = Vector2(440, 496)
occluder = SubResource("OccluderPolygon2D_bc5nu")

[node name="door2" type="ColorRect" parent="."]
z_index = 1
offset_left = 232.0
offset_top = -472.0
offset_right = 456.0
offset_bottom = -128.0
color = Color(0.244777, 0.244776, 0.244776, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="door2"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="door2/StaticBody2D"]
position = Vector2(112, 248)
shape = SubResource("RectangleShape2D_f1gjg")

[node name="LightOccluder2D" type="LightOccluder2D" parent="door2"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(440, 496)
occluder = SubResource("OccluderPolygon2D_bc5nu")

[node name="door4" type="ColorRect" parent="."]
z_index = 1
offset_left = 8.0
offset_top = -1400.0
offset_right = 232.0
offset_bottom = -1056.0
color = Color(0.244777, 0.244776, 0.244776, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="door4"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="door4/StaticBody2D"]
position = Vector2(112, 248)
shape = SubResource("RectangleShape2D_f1gjg")

[node name="LightOccluder2D" type="LightOccluder2D" parent="door4"]
position = Vector2(440, 496)
occluder = SubResource("OccluderPolygon2D_bc5nu")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, -880)
shape = SubResource("RectangleShape2D_2yopf")

[node name="Airlock" type="Area2D" parent="."]
position = Vector2(1.52588e-05, -128)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Airlock"]
position = Vector2(8, -856)
shape = SubResource("RectangleShape2D_qnfc1")

[node name="Outer" type="Area2D" parent="."]
position = Vector2(0, 496)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Outer"]
position = Vector2(8, -888)
shape = SubResource("RectangleShape2D_qnfc1")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(248, -672)
shape = SubResource("RectangleShape2D_5j34s")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-232, -672)
shape = SubResource("RectangleShape2D_5j34s")

[node name="State" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_f1gjg")
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_3yst8")
occluder_light_mask = 3

[node name="LightOccluder2D2" type="LightOccluder2D" parent="."]
position = Vector2(504, 0)
occluder = SubResource("OccluderPolygon2D_3yst8")
occluder_light_mask = 3

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Airlock" to="." method="_on_airlock_body_entered"]
[connection signal="body_exited" from="Airlock" to="." method="_on_airlock_body_exited"]
[connection signal="body_entered" from="Outer" to="." method="_on_outer_body_entered"]
